--- a/index.html
+++ b/index.html
@@ -1,206 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realtime GPS Tracker</title>
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
-
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f0f2f5;
-        }
-
-        #map {
-            height: 100vh;
-            width: 100vw;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-            overflow: hidden;
-        }
-
-        /* Floating Action Buttons */
-        .locate-btn, .theme-btn {
-            position: fixed; /* Always visible */
-            bottom: 20px;
-            background: rgba(76, 175, 239, 0.85); /* Semi-transparent blue */
-            color: white;
-            border: none;
-            padding: 14px 18px;
-            border-radius: 50%;
-            cursor: pointer;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.35);
-            transition: all 0.3s ease, box-shadow 0.3s ease;
-            font-size: 20px;
-            z-index: 1000; /* On top of map */
-            backdrop-filter: blur(4px);
-        }
-
-        .locate-btn:hover, .theme-btn:hover {
-            background: rgba(55, 149, 224, 0.95);
-            transform: scale(1.15);
-            box-shadow: 0 10px 25px rgba(0,0,0,0.5);
-        }
-
-        .locate-btn { right: 20px; }
-        .theme-btn { right: 80px; }
-
-        /* Mobile responsiveness */
-        @media (max-width: 600px) {
-            .locate-btn { right: 15px; bottom: 15px; padding: 12px 15px; font-size: 18px; }
-            .theme-btn { right: 70px; bottom: 15px; padding: 12px 15px; font-size: 18px; }
-        }
-
-        /* Info Panel */
-        .info-panel {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            background: rgba(255,255,255,0.9);
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            font-size: 14px;
-            line-height: 1.5;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Realtime GPS Tracker</title>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
+<style>
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f0f2f5;
+}
+#map {
+    height: 100vh;
+    width: 100vw;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+.locate-btn, .theme-btn {
+    position: fixed;
+    bottom: 20px;
+    background: rgba(76,175,239,0.85);
+    color: white;
+    border: none;
+    padding: 14px 18px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.35);
+    transition: all 0.3s ease;
+    font-size: 20px;
+    z-index: 1000;
+    backdrop-filter: blur(4px);
+}
+.locate-btn:hover, .theme-btn:hover {
+    background: rgba(55,149,224,0.95);
+    transform: scale(1.15);
+}
+.locate-btn {right:20px;}
+.theme-btn {right:80px;}
+@media(max-width:600px){
+    .locate-btn{right:15px; bottom:15px; padding:12px 15px; font-size:18px;}
+    .theme-btn{right:70px; bottom:15px; padding:12px 15px; font-size:18px;}
+}
+.info-panel {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background: rgba(255,255,255,0.9);
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    font-size: 14px;
+    line-height: 1.5;
+}
+</style>
 </head>
 <body>
-    <div id="map"></div>
-    <button class="locate-btn" title="Track Me">📍</button>
-    <button class="theme-btn" title="Toggle Theme">🌓</button>
-    <div class="info-panel" id="infoPanel">Click 📍 to start tracking.</div>
+<div id="map"></div>
+<button class="locate-btn" title="Track Me">📍</button>
+<button class="theme-btn" title="Toggle Theme">🌓</button>
+<div class="info-panel" id="infoPanel">Click 📍 to start tracking.</div>
 
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script>
-        // Initialize map
-        let map = L.map('map').setView([14.0860746, 100.608406], 6);
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+<script>
+// Initialize map
+let map = L.map('map').setView([14.0860746,100.608406],6);
+map.touchZoom.enable(); map.scrollWheelZoom.enable(); map.doubleClickZoom.enable(); map.dragging.enable();
 
-        // Map layers
-        let light = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-        let dark = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png');
-        let baseMaps = {"Light": light, "Dark": dark};
-        L.control.layers(baseMaps).addTo(map);
-        light.addTo(map);
+// Tile layers
+let light = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+let dark = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png');
+let currentLayer = light;
+L.control.layers({"Light": light,"Dark": dark}).addTo(map);
+light.addTo(map);
 
-        // Custom Icon
-        let myIcon = L.icon({
-            iconUrl: 'https://cdn-icons-png.flaticon.com/512/684/684908.png',
-            iconSize: [40, 40],
-            iconAnchor: [20, 40],
-            popupAnchor: [0, -35]
-        });
+document.querySelector('.theme-btn').addEventListener('click', ()=>{
+    map.removeLayer(currentLayer);
+    currentLayer = (currentLayer===light)? dark : light;
+    map.addLayer(currentLayer);
+});
 
-        // Marker and path
-        let marker = L.marker([14.0860746, 100.608406], { icon: myIcon })
-                     .addTo(map)
-                     .bindPopup('Starting Location')
-                     .openPopup();
-        let pathCoordinates = [];
-        let polyline = L.polyline(pathCoordinates, {color: 'red', weight: 5}).addTo(map); // Red path
+// Custom marker
+let myIcon = L.icon({
+    iconUrl:'https://cdn-icons-png.flaticon.com/512/684/684908.png',
+    iconSize:[40,40],
+    iconAnchor:[20,40],
+    popupAnchor:[0,-35]
+});
+let marker = L.marker([14.0860746,100.608406],{icon:myIcon}).addTo(map).bindPopup('Starting Location').openPopup();
 
-        // Info panel
-        let infoPanel = document.getElementById('infoPanel');
+// Path
+let pathCoordinates = [];
+let polyline = L.polyline(pathCoordinates,{color:'red',weight:5}).addTo(map);
+const MAX_POINTS = 50;
 
-        // Theme toggle
-        let currentLayer = light;
-        document.querySelector('.theme-btn').addEventListener('click', () => {
-            map.removeLayer(currentLayer);
-            currentLayer = (currentLayer === light) ? dark : light;
-            map.addLayer(currentLayer);
-        });
+// Info panel
+let infoPanel = document.getElementById('infoPanel');
 
-        // POIs
-        const locations = [
-            {name: "Bangkok", coords: [13.7563, 100.5018]},
-            {name: "Chiang Mai", coords: [18.7883, 98.9853]},
-            {name: "Phuket", coords: [7.8804, 98.3923]}
-        ];
+// POIs
+const locations = [
+    {name:"Bangkok", coords:[13.7563,100.5018]},
+    {name:"Chiang Mai", coords:[18.7883,98.9853]},
+    {name:"Phuket", coords:[7.8804,98.3923]}
+];
+locations.forEach(loc=>L.marker(loc.coords,{icon:myIcon}).addTo(map).bindPopup(loc.name));
 
-        locations.forEach(loc => {
-            L.marker(loc.coords, {icon: myIcon}).addTo(map)
-             .bindPopup(loc.name);
-        });
+function updateDistances(lat,lng){
+    return locations.map(loc=>{
+        const km = (map.distance([lat,lng],loc.coords)/1000).toFixed(2);
+        return `<br><b>Distance to ${loc.name}:</b> ${km} km`;
+    }).join('');
+}
 
-        // Function to calculate distance to all POIs
-        function updateDistances(lat, lng) {
-            let distancesText = '';
-            locations.forEach(loc => {
-                const distanceMeters = map.distance([lat, lng], loc.coords);
-                const distanceKm = (distanceMeters / 1000).toFixed(2);
-                distancesText += `<br><b>Distance to ${loc.name}:</b> ${distanceKm} km`;
-            });
-            return distancesText;
-        }
+// Real-time tracking
+let watchId, isTracking=false;
+let pathBounds = L.latLngBounds([]);
 
-        // Real-time tracking
-        let watchId;
-        let isTracking = false;
+document.querySelector('.locate-btn').addEventListener('click', ()=>{
+    if(!navigator.geolocation){ alert('Geolocation not supported'); return; }
 
-        document.querySelector('.locate-btn').addEventListener('click', () => {
-            if (!navigator.geolocation) {
-                alert('Geolocation is not supported by your browser');
-                return;
-            }
+    if(!isTracking){
+        watchId = navigator.geolocation.watchPosition(pos=>{
+            const lat = pos.coords.latitude;
+            const lng = pos.coords.longitude;
+            const speed = ((pos.coords.speed||0)*3.6).toFixed(1);
+            const heading = (pos.coords.heading||0).toFixed(0);
 
-            if (!isTracking) {
-                // Start tracking
-                watchId = navigator.geolocation.watchPosition(position => {
-                    const lat = position.coords.latitude;
-                    const lng = position.coords.longitude;
-                    const speed = ((position.coords.speed || 0) * 3.6).toFixed(1);
-                    const heading = (position.coords.heading || 0).toFixed(0);
+            // Smooth marker movement
+            let currentLatLng = marker.getLatLng();
+            let steps = 10;
+            let i = 0;
+            let deltaLat = (lat - currentLatLng.lat)/steps;
+            let deltaLng = (lng - currentLatLng.lng)/steps;
 
-                    map.setView([lat, lng], 15);
-                    marker.setLatLng([lat, lng])
-                          .bindPopup(`You are here!<br>Lat: ${lat.toFixed(5)}, Lng: ${lng.toFixed(5)}<br>Speed: ${speed} km/h<br>Heading: ${heading}°`)
-                          .openPopup();
+            let moveInterval = setInterval(()=>{
+                if(i>=steps) clearInterval(moveInterval);
+                else {
+                    let nextLat = currentLatLng.lat + deltaLat*i;
+                    let nextLng = currentLatLng.lng + deltaLng*i;
+                    marker.setLatLng([nextLat,nextLng]);
+                    i++;
+                }
+            },50);
 
-                    // Update path
-                    pathCoordinates.push([lat, lng]);
-                    polyline.setLatLngs(pathCoordinates);
+            // Update path
+            pathCoordinates.push([lat,lng]);
+            if(pathCoordinates.length>MAX_POINTS) pathCoordinates.shift();
+            polyline.setLatLngs(pathCoordinates);
 
-                    // Update info panel
-                    infoPanel.innerHTML = `
-                        <b>Current Location:</b><br>
-                        Lat: ${lat.toFixed(5)}<br>
-                        Lng: ${lng.toFixed(5)}<br>
-                        Speed: ${speed} km/h<br>
-                        Heading: ${heading}°`;
-                    
-                    // Add distances dynamically
-                    infoPanel.innerHTML += updateDistances(lat, lng);
+            // Update path bounds
+            pathBounds.extend([lat,lng]);
 
-                    // Geofencing alert for Bangkok
-                    const bangkok = L.latLng(13.7563, 100.5018);
-                    const distanceToBangkok = map.distance([lat, lng], bangkok);
-                    if(distanceToBangkok < 5000){
-                        infoPanel.innerHTML += "<br><span style='color:red; font-weight:bold;'>⚠ You entered the Bangkok zone!</span>";
-                    }
-
-                }, error => {
-                    alert('Unable to retrieve your location');
-                }, { enableHighAccuracy: true, maximumAge: 0 });
-
-                isTracking = true;
-                document.querySelector('.locate-btn').textContent = '🛑'; // Change icon to stop
+            // Auto-zoom on mobile
+            if(window.innerWidth <= 600){
+                map.fitBounds(pathBounds, {padding: [50,50]});
             } else {
-                // Stop tracking
-                navigator.geolocation.clearWatch(watchId);
-                isTracking = false;
-                document.querySelector('.locate-btn').textContent = '📍'; // Reset icon
+                map.setView([lat,lng], 15);
             }
-        });
 
-        // Add geofence circle around Bangkok
-        L.circle([13.7563, 100.5018], { radius: 5000, color: 'red', fillOpacity: 0.2 }).addTo(map);
-    </script>
+            // Update info panel
+            infoPanel.innerHTML = `<b>Current Location:</b><br>Lat: ${lat.toFixed(5)}<br>Lng: ${lng.toFixed(5)}<br>Speed: ${speed} km/h<br>Heading: ${heading}°`;
+            infoPanel.innerHTML += updateDistances(lat,lng);
+
+            // Geofence alert
+            const bangkok = L.latLng(13.7563,100.5018);
+            if(map.distance([lat,lng],bangkok)<5000)
+                infoPanel.innerHTML += "<br><span style='color:red; font-weight:bold;'>⚠ You entered the Bangkok zone!</span>";
+
+        }, err => alert('Unable to retrieve location'), {enableHighAccuracy:true, maximumAge:0, timeout:10000});
+
+        isTracking=true;
+        document.querySelector('.locate-btn').textContent='🛑';
+    }else{
+        navigator.geolocation.clearWatch(watchId);
+        isTracking=false;
+        document.querySelector('.locate-btn').textContent='📍';
+    }
+});
+
+// Geofence circle
+L.circle([13.7563,100.5018],{radius:5000,color:'red',fillOpacity:0.2}).addTo(map);
+</script>
 </body>
 </html>
